@@ -1,8 +1,5 @@
 package br.com.orquestrator.orquestrator.core.engine.runtime;
 
-import br.com.orquestrator.orquestrator.core.context.ContextFactory;
-import br.com.orquestrator.orquestrator.core.context.ContextHolder;
-import br.com.orquestrator.orquestrator.core.context.ExecutionContext;
 import br.com.orquestrator.orquestrator.core.context.identity.RequestIdentity;
 import br.com.orquestrator.orquestrator.domain.model.TaskDefinition;
 import br.com.orquestrator.orquestrator.infra.IdGenerator;
@@ -14,9 +11,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
-import java.util.Map;
+import java.util.Collections;
 import java.util.Set;
 
+/**
+ * BackgroundExecutionEngine: Executa tarefas em segundo plano.
+ * Agora desacoplado do ExecutionContext e focado no Shadow Context.
+ */
 @Slf4j
 @Component
 @RequiredArgsConstructor
@@ -24,29 +25,35 @@ public class BackgroundExecutionEngine {
 
     private final TaskRegistry taskRegistry;
     private final TaskChainCompiler chainCompiler;
-    private final ContextFactory contextFactory;
     private final IdGenerator idGenerator;
 
     public void execute(TaskDefinition def) {
+        // 1. Cria a identidade da execução em background
         RequestIdentity identity = new RequestIdentity(
             idGenerator.generateFastId(),
             "BACKGROUND_" + def.nodeId().value(),
             "ORDER_BG",
-            idGenerator.generateFastId()
+            idGenerator.generateFastId(),
+            Collections.emptySet()
         );
 
-        ExecutionContext context = contextFactory.create(identity, Map.of(), Map.of());
+        // 2. Resolve a tarefa e compila a cadeia de interceptores
         Task coreTask = taskRegistry.getTask(def);
         Task executable = chainCompiler.compile(coreTask, def);
 
-        ScopedValue.where(ContextHolder.CONTEXT, context).run(() -> {
-            try {
-                // Corrigido: Adicionado Set.of() para requiredFields
-                TaskContext taskContext = new TaskContext(Map.of(), null, def.nodeId().value(), Set.of());
-                executable.execute(taskContext);
-            } catch (Exception e) {
-                log.error("Falha na task background [{}]: {}", def.nodeId().value(), e.getMessage());
-            }
-        });
+        try {
+            // 3. Executa a tarefa com um contexto vazio (Shadow Context)
+            TaskContext taskContext = new TaskContext(
+                Collections.emptyMap(), 
+                null, 
+                def.nodeId().value(), 
+                Set.of()
+            );
+            
+            executable.execute(taskContext);
+            
+        } catch (Exception e) {
+            log.error("Falha na task background [{}]: {}", def.nodeId().value(), e.getMessage());
+        }
     }
 }
